changes in design

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- Project 1 -->
             <div class="group relative aspect-[4/5] overflow-hidden">
               <a href="https://github.com/Raone-souza/App_Chat" target="_blank">
-                <img src="Assets/imgs_projects/projeto1.png" 
+                <img src="assets\imgs_projects\projeto1.png" 
                      alt="project 1" 
                      class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
                 <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-center justify-center">
@@ -103,7 +103,7 @@
             <!-- Project 2 -->
             <div class="group relative aspect-[4/5] overflow-hidden">
               <a href="https://github.com/Raone-souza/Gerando-Curriculo-e-Enviando-por-E-mail" target="_blank">
-                <img src="Assets/imgs_projects/projeto2.png" 
+                <img src="assets/imgs_projects/projeto2.png" 
                      alt="Project 2" 
                      class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-105">
                 <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-center justify-center">
